# Local-First-AST-Boundary-Guard

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
code-guardian/: AGENTS.md  README.md  pod.json
code-guardian/agents/hello/: hello.json  instruction.md
code-guardian/tables/intentartifacts/: intentartifacts.json
code-guardian/tables/releasechecklist/: releasechecklist.json
docs/: architecture.md
src/code_guardian/: __main__.py  docs_checker.py  file_scanner.py  intent_manager.py  pre_commit_hook.py  release_notes.py  review_packet.py  risk_analyzer.py  test_checker.py
tests/: run_tests.py  test_checkers.py  test_file_scanner.py  test_release_notes.py  test_review_packet.py  test_risk_analyzer.py
